<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:clipToPadding="false"
    tools:context=".LoginActivity">


    <!-- Username input -->
    <EditText
        android:id="@+id/edit_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="36dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="parent"/>


    <!-- Password input -->
    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="24dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edit_login_username"/>


    <!-- Log in button input -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/log_in"
        style="@style/PositiveButton"
        android:background="@drawable/positive_btn_background"
        app:layout_constraintTop_toBottomOf="@id/edit_login_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <!-- Go to sign up activity -->
    <TextView
        android:id="@+id/tv_no_account_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_yet"
        android:textColor="@color/colorPositiveButton"
        android:textSize="16sp"
        android:layout_marginTop="26dp"
        android:padding="3dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>