<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.constraint.Guideline
        android:id="@+id/sign_up_vertical_guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        app:layout_constraintTop_toBottomOf="@id/input_layout_username"
        app:layout_constraintRight_toLeftOf="@id/sign_up_vertical_guideline"
        app:layout_constraintLeft_toLeftOf="parent">

        <!-- First name -->
        <EditText
            android:id="@+id/edit_sign_up_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        app:layout_constraintTop_toBottomOf="@id/input_layout_username"
        app:layout_constraintLeft_toRightOf="@id/sign_up_vertical_guideline"
        app:layout_constraintRight_toRightOf="parent">

        <!-- Last name -->
        <EditText
            android:id="@+id/edit_sign_up_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="8dp"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/birth_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_first_name">

        <!-- Birth date -->
        <EditText
            android:id="@+id/edit_sign_up_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:focusable="false"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/input_layout_birth_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- Password -->
        <EditText
            android:id="@+id/edit_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- Password confirmation -->
        <EditText
            android:id="@+id/edit_sign_up_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>


    <!-- Log in button input -->
    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        style="@style/PositiveButton"
        app:layout_constraintTop_toBottomOf="@id/input_layout_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>