<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditTripActivityActivity"
    android:padding="16dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>


    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_50"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/input_layout_name"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideline_50"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:hint="@string/price"
        app:layout_constraintTop_toTopOf="@id/input_layout_location"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideline_50"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_starts_at"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/starts_at"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/input_layout_price"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideline_50"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/edit_starts_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_ends_at"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ends_at"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/input_layout_price"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideline_50"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/edit_ends_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_add_trip_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_the_activity"
        style="@style/PositiveButton"
        app:layout_constraintTop_toBottomOf="@id/input_layout_starts_at"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideline_50"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>